# Copyright (c) 2024 by FlashInfer team.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "flashinfer-python"
dynamic = ["version", "dependencies"]
description = "FlashInfer: Kernel Library for LLM Serving"
requires-python = ">=3.10,<4.0"
authors = [{ name = "FlashInfer team" }]
license = "Apache-2.0"
readme = "README.md"
urls = { Homepage = "https://github.com/flashinfer-ai/flashinfer" }
license-files = ["LICENSE", "LICENSE*.txt"]

[project.optional-dependencies]
cu12 = ["nvidia-cutlass-dsl>=4.5.0"]
cu13 = ["nvidia-cutlass-dsl[cu13]>=4.5.0"]
# Runtime deps for the moe_ep transport backends. Pair with the BUILD_NVEP=1
# env var at install time: `BUILD_NVEP=1 pip install -e ".[nvep]"`. The env var
# triggers the NIXL-EP submodule build (meson); the build_backend.py hook also
# pip-installs `nixl-cu13>=1.0.1` with --no-deps (matching SGLang's Dockerfile
# pattern) so it doesn't drag transitive constraints that downgrade torch.
#
# NCCL-EP is NO LONGER built from the in-tree submodule: it is provided by the
# released `nccl4py` wheel (>=0.3.1), which ships the `nccl.ep` Pythonic API and
# bundles libnccl_ep.so (loaded via cuda-pathfinder, so no LD_LIBRARY_PATH hack).
# `flashinfer.moe_ep.nccl_ep` imports `nccl.ep`; availability is probed via
# `find_spec("nccl.ep")`.
nvep = [
  "cuda-python>=13.0",
  "nccl4py>=0.3.1",
  # NCCL-EP group-create fails on B200 with older NCCL (2.27.x/2.29.x); >=2.30.7
  # carries the B200 EP support. Ensure this wheel's libnccl is loaded (first on
  # LD_LIBRARY_PATH) rather than a base-image system NCCL.
  "nvidia-nccl-cu13>=2.30.7",
]

[project.scripts]
flashinfer = "flashinfer.__main__:cli"

[build-system]
requires = ["setuptools>=77", "packaging>=24", "apache-tvm-ffi>=0.1.6,!=0.1.8,!=0.1.8.post0,<0.2"]
build-backend = "build_backend"
backend-path = ["."]

[tool.codespell]
ignore-words-list = "3nd"
skip = ["build", "3rdparty", "dist", ".venv"]

[tool.setuptools]
include-package-data = false
py-modules = ["build_backend", "build_utils"]

[tool.setuptools.dynamic]
version = { attr = "flashinfer._build_meta.__version__" }
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["."]
include = ["flashinfer*"]
exclude = ["flashinfer-jit-cache*", "flashinfer-cubin*"]

[tool.setuptools.package-dir]
"flashinfer.data" = "."
"flashinfer.data.cutlass" = "3rdparty/cutlass"
"flashinfer.data.spdlog" = "3rdparty/spdlog"
"flashinfer.data.cccl" = "3rdparty/cccl"

[tool.setuptools.package-data]
"flashinfer" = ["_build_meta.py"]
"flashinfer.data" = ["csrc/**", "include/**"]
"flashinfer.data.cutlass" = ["include/**", "tools/util/include/**"]
"flashinfer.data.spdlog" = ["include/**"]
"flashinfer.data.cccl" = ["cub/cub/**", "libcudacxx/include/**", "thrust/thrust/**"]
# EP backend shared libraries built in-tree from 3rdparty/{nixl,nccl} when
# BUILD_NVEP=1 is set during `pip install`. The .so files live under
# flashinfer/moe_ep/{nixl_ep,nccl_ep}/_libs/ (gitignored; populated by
# build_backend._build_nvep_if_enabled).
"flashinfer.moe_ep.nixl_ep" = ["_libs/**"]
"flashinfer.moe_ep.nccl_ep" = ["_libs/*.so*"]

[tool.mypy]
files = ["flashinfer"]
ignore_missing_imports = true
show_column_numbers = true
show_error_context = true
follow_imports = "skip"
ignore_errors = false
strict_optional = false
exclude = [
  "flashinfer-cubin/",
  "flashinfer-jit-cache/",
  "3rdparty/",
  "flashinfer/data/cutlass/",
  "build/",
]


[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  # "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  # "I",
]
ignore = [
  # Module level import not at top of file
  "E402",
  # star imports
  "F405",
  "F403",
  # ambiguous name
  "E741",
  # line too long
  "E501",
  # key in dict.keys()
  "SIM118",
  # memory leaks
  "B019",
  # No such file or directory
  "E902",
  # nested `if` statements
  "SIM102",
  # `if`-`else`-block
  "SIM108",
  # assign `lambda` expressions
  "E731",
  # Loop control variable overrides iterable it iterates
  "B020",
  # Return te negated condition directly
  "SIM103",
  # Function definition does not bind loop variable
  "B023",
]
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
